SDL2 added to project

--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -5,12 +5,20 @@ SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules"
 SET (CXX11_FLAGS -std=gnu++11)
 SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
 
+FIND_PACKAGE(SDL2 REQUIRED)
+
+SET (CXX11_FLAGS -std=gnu++11)
+SET (CDEBUG_FLAGS -g)
+SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
+SET (TARGET_LIBRARIES "${SDL2_LIBRARY}")
+
 IF (UNIX)
   ADD_DEFINITIONS(-DUNIX)
 ENDIF(UNIX)
 
 INCLUDE_DIRECTORIES(
   "${PROJECT_SOURCE_DIR}/include"
+  ${SDL2_INCLUDE_DIR}
 )
 
 # Set includes
@@ -29,3 +37,5 @@ add_custom_target("${PROJECT_NAME}_SUCCESSFUL" ALL
                COMMAND ${CMAKE_COMMAND} -E echo "====================="
                COMMAND ${CMAKE_COMMAND} -E echo "${CMAKE_CURRENT_BINARY_DIR}"
              )
+
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})
